src/objects/Misure_di_Riferimento_Sartoria__c.object
<CustomObject>
    <fields>
        <fullName>Altezza_montante_davanti__c</fullName>
        <label>Altezza montante davanti</label>
        <precision>18</precision>
        <scale>1</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Altezza_montante_dietro__c</fullName>
        <label>Altezza montante dietro</label>
        <precision>18</precision>
        <scale>1</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Larghezza_coscia__c</fullName>
        <label>Larghezza coscia</label>
        <precision>18</precision>
        <scale>1</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Larghezza_fondo__c</fullName>
        <label>Larghezza fondo</label>
        <precision>18</precision>
        <scale>1</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Larghezza_ginocchio__c</fullName>
        <label>Larghezza ginocchio</label>
        <precision>18</precision>
        <scale>1</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Larghezza_manica_bicipite__c</fullName>
        <label>Larghezza manica bicipite</label>
        <precision>18</precision>
        <scale>1</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Larghezza_manica_fondo__c</fullName>
        <label>Larghezza manica fondo</label>
        <precision>18</precision>
        <scale>1</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Larghezza_polpaccio__c</fullName>
        <label>Larghezza polpaccio</label>
        <precision>18</precision>
        <scale>1</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Larghezza_spalle_pt_to_pt__c</fullName>
        <label>Larghezza spalle pt. to pt.</label>
        <precision>18</precision>
        <scale>1</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Lungh_giacca_dietro__c</fullName>
        <label>Lungh. giacca dietro</label>
        <precision>18</precision>
        <scale>1</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Lungh_manica_destra_cucitura_interna__c</fullName>
        <label>Lungh. manica destra (cucitura interna)</label>
        <precision>18</precision>
        <scale>1</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Lungh_manica_sinistra_cucitura_interna__c</fullName>
        <label>Lungh. manica sinistra(cucitura interna)</label>
        <precision>18</precision>
        <scale>1</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Record_Type_Label__c</fullName>
        <formula>RecordType.DeveloperName</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Record Type Label</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Semi_bacino__c</fullName>
        <label>Semi bacino</label>
        <precision>18</precision>
        <scale>1</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Semi_torace__c</fullName>
        <label>Semi torace</label>
        <precision>18</precision>
        <scale>1</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Semi_vita__c</fullName>
        <label>Semi vita</label>
        <precision>18</precision>
        <scale>1</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Taglia__c</fullName>
        <label>Taglia</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <label>Misura di Riferimento Sartoria</label>
    <nameField>
        <label>Nome Misura di Riferimento Sartoria</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Misure di Riferimento Sartoria</pluralLabel>
    <recordTypes>
        <fullName>Giacca_un_petto</fullName>
        <active>true</active>
        <label>Giacca un petto</label>
    </recordTypes>
    <recordTypes>
        <fullName>Giacca_un_petto_e_mezzo</fullName>
        <active>true</active>
        <label>Giacca un petto e mezzo</label>
    </recordTypes>
    <recordTypes>
        <fullName>Pantalone</fullName>
        <active>true</active>
        <label>Pantalone</label>
    </recordTypes>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>